--- a/src/components/Slider/CardSlider/CardSlider.module.scss
+++ b/src/components/Slider/CardSlider/CardSlider.module.scss
@@ -33,7 +33,20 @@
 	background: black;
 	pointer-events: all;
 	transform: translate(var(--x), var(--y)) rotate(var(--rot));
-	transition: transform 0.8s cubic-bezier(0, 0.02, 0, 1);
+	transition:
+		transform $duration-short ease,
+		width $duration-short ease,
+		height $duration-short ease;
+
+	&.active {
+		--width: clamp(100px, calc(200px + 40vw), 500px);
+		--height: clamp(250px, calc(50px + 40vh), 400px);
+
+		transition:
+			transform $duration-short ease,
+			width $duration-long ease,
+			height $duration-long ease;
+	}
 
 	.carousel-box {
 		position: absolute;
@@ -66,7 +79,7 @@
 	.title {
 		position: absolute;
 		z-index: 1;
-		color: #fff;
+		color: $color-text;
 		bottom: 20px;
 		left: 20px;
 		transition: opacity 0.8s cubic-bezier(0, 0.02, 0, 1);
@@ -98,5 +111,10 @@
 	.carousel-item {
 		--width: clamp(250px, 30vw, 300px);
 		--height: clamp(400px, 40vw, 400px);
+
+		&.active {
+			--width: clamp(100px, calc(200px + 35vw), 700px);
+			--height: clamp(250px, calc(50px + 40vh), 400px);
+		}
 	}
 }
