--- a/src/styles/pages/App.module.scss
+++ b/src/styles/pages/App.module.scss
@@ -5,6 +5,7 @@
 	width: 100%;
 	height: 100dvh;
 	z-index: -1;
+	transition: height $duration-short ease-in-out;
 }
 
 .haloMouse {
